--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -34,17 +34,19 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ISave" />
-        <binding name="BasicHttpBinding_IGet" />
+        <binding name="BasicHttpBinding_ISave" allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://shiva5-pc/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
-        contract="SaveRMAServiceRefer.ISave" name="BasicHttpBinding_ISave" />
-      <endpoint address="http://shiva5-pc/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
         contract="GetRMAServiceRef.IGet" name="BasicHttpBinding_IGet" />
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
+        contract="SaveRMAServiceRefer.ISave" name="BasicHttpBinding_ISave" />
     </client>
   </system.serviceModel>
 </configuration>
