Validation and Image canges

--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -330,6 +330,10 @@
   <ItemGroup>
     <None Include="Service References\SaveRMAServiceRefer\KrausWarehouseServices1.disco" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Checked .png" />
+    <Resource Include="Images\Unchecked .png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
