Images Save in the Folder

--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -13,7 +13,7 @@
         <value>0</value>
       </setting>
       <setting name="DrivePath" serializeAs="String">
-        <value>C:\\SKUReturned</value>
+        <value>\\Shiva5-PC\Shipping\images\</value>
       </setting>
       <setting name="GetServicePath" serializeAs="String">
         <value>http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA</value>
