--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -5,14 +5,14 @@
     <Setting Name="CameraNumber" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="DrivePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\\SKUReturned</Value>
-    </Setting>
     <Setting Name="GetServicePath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA</Value>
     </Setting>
     <Setting Name="SetServicePath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
+    </Setting>
+    <Setting Name="DrivePath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\Shiva5-PC\Shipping\images\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
