access server directory code

--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -19,7 +19,7 @@
         <value>http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
       <setting name="DrivePath" serializeAs="String">
-        <value>\\Shiva5-PC\Shipping\images\</value>
+        <value>\\SHIVA5-PC\Shipping\images\</value>
       </setting>
     </KrausRGA.Properties.Settings>
   </applicationSettings>
