--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
     </Setting>
     <Setting Name="DrivePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\\Shiva5-PC\Shipping\images\</Value>
+      <Value Profile="(Default)">\\SHIVA5-PC\Shipping\images\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
