--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -13,13 +13,19 @@
         <value>0</value>
       </setting>
       <setting name="GetServicePath" serializeAs="String">
-        <value>http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA</value>
+        <value>http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Get.svc/SOA</value>
       </setting>
       <setting name="SetServicePath" serializeAs="String">
-        <value>http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
+        <value>http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
       <setting name="DrivePath" serializeAs="String">
-        <value>\\SHIVA5-PC\Shipping\images\</value>
+        <value>\\192.168.5.66\Shipping\Images\</value>
+      </setting>
+      <setting name="UserNameForImagesLogin" serializeAs="String">
+        <value>shiva5</value>
+      </setting>
+      <setting name="UserPasswordForImages" serializeAs="String">
+        <value>avishiva</value>
       </setting>
     </KrausRGA.Properties.Settings>
   </applicationSettings>
@@ -30,7 +36,6 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <connectionStrings><add name="x3v6Entities" connectionString="metadata=res://*/EntityModel.x3v6.csdl|res://*/EntityModel.x3v6.ssdl|res://*/EntityModel.x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="RMASYSTEMEntities" connectionString="metadata=res://*/EntityModel.RMASYSTEMModel.csdl|res://*/EntityModel.RMASYSTEMModel.ssdl|res://*/EntityModel.RMASYSTEMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.5.241;initial catalog=RMASYSTEM;persist security info=True;user id=sa;password=2wvcDW8j;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -41,12 +46,12 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
-        contract="GetRMAServiceRef.IGet" name="BasicHttpBinding_IGet" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SaveRMAServiceRefer.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
+        contract="GetRMAServiceRef.IGet" name="BasicHttpBinding_IGet" />
     </client>
   </system.serviceModel>
 </configuration>
