--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -6,13 +6,19 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="GetServicePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA</Value>
+      <Value Profile="(Default)">http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Get.svc/SOA</Value>
     </Setting>
     <Setting Name="SetServicePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
+      <Value Profile="(Default)">http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
     </Setting>
     <Setting Name="DrivePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\\SHIVA5-PC\Shipping\images\</Value>
+      <Value Profile="(Default)">\\192.168.5.66\Shipping\Images\</Value>
+    </Setting>
+    <Setting Name="UserNameForImagesLogin" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">shiva5</Value>
+    </Setting>
+    <Setting Name="UserPasswordForImages" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">avishiva</Value>
     </Setting>
   </Settings>
 </SettingsFile>
