--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -6,6 +6,9 @@
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="KrausRGA.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <applicationSettings>
     <KrausRGA.Properties.Settings>
@@ -54,4 +57,11 @@
         contract="GetRMAServiceRef.IGet" name="BasicHttpBinding_IGet" />
     </client>
   </system.serviceModel>
+  <userSettings>
+    <KrausRGA.Properties.Settings>
+      <setting name="fontsize_headersiz_constantsize" serializeAs="String">
+        <value>22_45_20</value>
+      </setting>
+    </KrausRGA.Properties.Settings>
+  </userSettings>
 </configuration>
