--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="UserPasswordForImages" Type="System.String" Scope="Application">
       <Value Profile="(Default)">avishiva</Value>
     </Setting>
+    <Setting Name="fontsize_headersiz_constantsize" Type="System.String" Scope="User">
+      <Value Profile="(Default)">22_45_20</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
