--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -386,6 +386,12 @@
   <ItemGroup>
     <Resource Include="Images\icoScan.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\icoSave.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\icoTabCtrl.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
