--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -136,6 +136,8 @@
     </ApplicationDefinition>
     <Compile Include="Barcode\BarcodeRead.cs" />
     <Compile Include="Barcode\Camera.cs" />
+    <Compile Include="Barcode\GDIStuff.cs" />
+    <Compile Include="Barcode\Win32Stuff.cs" />
     <Compile Include="DBLogics\Service.cs" />
     <Compile Include="DBLogics\cmdRMAAudit.cs" />
     <Compile Include="DBLogics\cmdReasonCategory.cs" />
