--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -19,7 +19,7 @@
         <value>http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
       <setting name="DrivePath" serializeAs="String">
-        <value>C:\\Shipping\Images\</value>
+        <value>C:\Images</value>
       </setting>
       <setting name="UserNameForImagesLogin" serializeAs="String">
         <value>shiva5</value>
