Service Connection Changed

--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -13,10 +13,10 @@
         <value>0</value>
       </setting>
       <setting name="GetServicePath" serializeAs="String">
-        <value>http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Get.svc/SOA</value>
+        <value>http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
       <setting name="SetServicePath" serializeAs="String">
-        <value>http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
+        <value>http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
       <setting name="DrivePath" serializeAs="String">
         <value>C:\Images</value>
@@ -46,12 +46,12 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
-        contract="SaveRMAServiceRefer.ISave" name="BasicHttpBinding_ISave" />
-      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
         contract="GetRMAServiceRef.IGet" name="BasicHttpBinding_IGet" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
+        contract="SaveRMAServiceRefer.ISave" name="BasicHttpBinding_ISave" />
     </client>
   </system.serviceModel>
 </configuration>
