--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -6,10 +6,10 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="GetServicePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Get.svc/SOA</Value>
+      <Value Profile="(Default)">http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
     </Setting>
     <Setting Name="SetServicePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://192.168.1.16/warehouse%20services/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
+      <Value Profile="(Default)">http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
     </Setting>
     <Setting Name="DrivePath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\Images</Value>
