--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -77,19 +77,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
-    <Reference Include="BarcodeImaging, Version=1.0.3579.22966, Culture=neutral, PublicKeyToken=82bacb0497aa5fed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\BarcodeImaging.dll</HintPath>
+    <Reference Include="BarcodeImaging">
+      <HintPath>\\SHIVA5-PC\Shared Folder\Debug\BarcodeImaging.dll</HintPath>
     </Reference>
-    <Reference Include="BarcodeScanner, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f6deb2c38c6117ef, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\BarcodeScanner.dll</HintPath>
+    <Reference Include="BarcodeScanner">
+      <HintPath>\\SHIVA5-PC\Shared Folder\Debug\BarcodeScanner.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="InputSimulator">
-      <HintPath>..\..\..\Users\Shiva5\Desktop\InputSimulator.dll</HintPath>
+      <HintPath>\\SHIVA5-PC\Shared Folder\Debug\InputSimulator.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Encoder, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
     <Reference Include="PresentationUI, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -115,10 +113,6 @@
     </Reference>
     <Reference Include="UIAutomationProvider" />
     <Reference Include="UIAutomationTypes" />
-    <Reference Include="WebcamControl, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\WebcamControl.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -127,7 +121,7 @@
       <HintPath>..\WpfCap\bin\Debug\WpfCap.dll</HintPath>
     </Reference>
     <Reference Include="WPFToolkit.Extended">
-      <HintPath>D:\Avinash\Softwares\ExtendedWPFToolkit_Binaries (1)\WPFToolkit.Extended.dll</HintPath>
+      <HintPath>\\SHIVA5-PC\Shared Folder\Debug\WPFToolkit.Extended.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +155,7 @@
     <Compile Include="EntityModel\Return.cs" />
     <Compile Include="EntityModel\ReturnDetail.cs" />
     <Compile Include="ErrorLogger\ErrorLogger.cs" />
+    <Compile Include="Models\mNewRMANumber.cs" />
     <Compile Include="Models\mRMAAudit.cs" />
     <Compile Include="Models\mReturnDetails.cs" />
     <Compile Include="Models\mUser.cs" />
@@ -182,6 +177,9 @@
     </Compile>
     <Compile Include="UI\wndCamera.xaml.cs">
       <DependentUpon>wndCamera.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\wndNewRMANumber.xaml.cs">
+      <DependentUpon>wndNewRMANumber.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\wndSrNumberInfo.xaml.cs">
       <DependentUpon>wndSrNumberInfo.xaml</DependentUpon>
@@ -215,6 +213,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\wndCamera.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\wndNewRMANumber.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
